# gadgetron-starter

./: .dockerignore  .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  StarterAcquisitionChannelGadget.cpp  StarterAcquisitionChannelGadget.h  StarterGadget.cpp  StarterGadget.h  StarterGadget.xml  StarterGadget_lib_export.h  StarterGadgets.xml  StarterGadgets_export.h  StarterImageChannelGadget.cpp  StarterImageChannelGadget.h  StarterImagePureGadget.cpp  StarterImagePureGadget.h  environment.yml  issues.md
.devcontainer/: bootstrap-vscode.sh  devcontainer.json
_data/: metadata.db
config/: SimpleFFT.xml  default_channel_passthrough.xml  default_channel_python_fixed_scale.xml  default_image_fixed_scale.xml  default_load_image_from_storage_server.xml  default_pure_passthrough.xml  default_save_image_to_storage_server.xml  default_simple_fft_python.xml  simple_fft_cpp.xml  simple_fft_python.xml
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/doxygen/doc/html/: _acquisition_passthrough_channel_gadget_8h.html  _acquisition_passthrough_channel_gadget_8h_source.html  _image_fixed_scale_pure_gadget_8h.html  _image_fixed_scale_pure_gadget_8h_source.html  _image_fixed_scale_python_channel_gadget_8h.html  _image_fixed_scale_python_channel_gadget_8h_source.html  _image_passthrough_pure_gadget_8h.html  _image_passthrough_pure_gadget_8h_source.html  _load_image_from_storage_server_8h.html  _load_image_from_storage_server_8h_source.html  _save_image_to_storage_server_8h.html  _save_image_to_storage_server_8h_source.html  annotated.html  class_gadgetron_1_1_acquisition_passthrough_channel_gadget-members.html  class_gadgetron_1_1_acquisition_passthrough_channel_gadget.html  class_gadgetron_1_1_image_fixed_scale_pure_gadget-members.html  class_gadgetron_1_1_image_fixed_scale_pure_gadget.html  class_gadgetron_1_1_image_fixed_scale_python_channel_gadget-members.html  class_gadgetron_1_1_image_fixed_scale_python_channel_gadget.html  class_gadgetron_1_1_image_passthrough_pure_gadget-members.html  class_gadgetron_1_1_image_passthrough_pure_gadget.html  class_gadgetron_1_1_load_image_from_storage_server-members.html  class_gadgetron_1_1_load_image_from_storage_server.html  class_gadgetron_1_1_save_image_to_storage_server-members.html  class_gadgetron_1_1_save_image_to_storage_server.html  classes.html  dir_cbd789f24e87ad15c5bf56fc7e5f04f4.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  namespace_gadgetron.html  namespaces.html
doc/doxygen/doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_4.js  namespaces_0.js  searchdata.js  variables_0.js
doc/doxygen/doc/xml/: Doxyfile.xml  _acquisition_passthrough_channel_gadget_8h.xml  _image_fixed_scale_pure_gadget_8h.xml  _image_fixed_scale_python_channel_gadget_8h.xml  _image_passthrough_pure_gadget_8h.xml  _load_image_from_storage_server_8h.xml  _save_image_to_storage_server_8h.xml  class_gadgetron_1_1_acquisition_passthrough_channel_gadget.xml  class_gadgetron_1_1_image_fixed_scale_pure_gadget.xml  class_gadgetron_1_1_image_fixed_scale_python_channel_gadget.xml  class_gadgetron_1_1_image_passthrough_pure_gadget.xml  class_gadgetron_1_1_load_image_from_storage_server.xml  class_gadgetron_1_1_save_image_to_storage_server.xml  dir_cbd789f24e87ad15c5bf56fc7e5f04f4.xml  index.xml  namespace_core.xml  namespace_gadgetron.xml  namespacestd.xml
doc/source/: api.rst  building.md  conf.py  gadgets.rst  index.rst  obtaining.md  using.md
gadgets/: AcquisitionPassthroughChannelGadget.cpp  AcquisitionPassthroughChannelGadget.h  ImageFixedScalePureGadget.cpp  ImageFixedScalePureGadget.h  ImageFixedScalePythonChannelGadget.cpp  ImageFixedScalePythonChannelGadget.h  ImageFixedScalePythonChannelGadget.py  ImagePassthroughPureGadget.cpp  ImagePassthroughPureGadget.h  LoadImageFromStorageServer.cpp  LoadImageFromStorageServer.h  SaveImageToStorageServer.cpp  SaveImageToStorageServer.h  SimpleFFT.cpp  SimpleFFT.h  SimpleFFT.py  SimpleFFT_CPP.cpp  SimpleFFT_CPP.h  SimpleFFT_Python.cpp  SimpleFFT_Python.h  SimpleFFT_Python.py
integration/cases/: StarterGadgets.cfg
integration/data/StarterGadgets/: StarterGadgets_out.mrd
test/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  data.json  getData.sh  install_manifest.txt  runTests.sh
test/cases/: SimpleFFT.cfg  default_channel_passthrough.cfg  default_channel_python_fixed_scale.cfg  default_image_fixed_scale.cfg  default_load_image_from_storage_server.cfg  default_pure_passthrough.cfg  default_save_image_to_storage_server.cfg  simple_fft_cpp.cfg  simple_fft_python.cfg
test_data/: noiseTest.h5
